infrastructure/platform/observability/logging/logging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-logging
  labels:
    name: openshift-logging
    openshift.io/cluster-monitoring: "true"
