infrastructure/platform/observability/logging/loki-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: loki-gateway
  namespace: openshift-logging
  labels:
    app.kubernetes.io/part-of: payu
spec:
  host: loki.apps.fajjjar.my.id
  to:
    kind: Service
    name: loki-gateway-http
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
